[project]
name = "turl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest-asyncio>=1.1.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "faker>=37.6.0",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true  # Formats code in docstrings.

[tool.ruff.lint.isort]
known-first-party = [
    "source",
]

[tool.mypy]
mypy_path = "source/"
#exclude = [
#    "alembic/",
#    "tests/",
#]
#plugins = [
#    "mypy_django_plugin.main"
#]
ignore_missing_imports = true
disallow_untyped_defs = true  # Requires annotations on functions
warn_redundant_casts = true   # Flags unnecessary casts
warn_unused_ignores = true    # Helps clean up # type: ignor
